workplace/log/build_2024-05-23_23-55-40/learning/stderr.log
/usr/local/lib/python3.6/dist-packages/setuptools/command/install.py:37: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  setuptools.SetuptoolsDeprecationWarning,
  File "/home/mi/workplace/install/learning/lib/python3.6/site-packages/learning/keeper.py", line 12
    import .get_data
           ^
SyntaxError: invalid syntax

